# nc2csv

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: args.cpp  args.h  cfdims.h  cftime.cpp  cftime.h  commonmutex.h  conversionjob.cpp  conversionjob.h  fastnc.cpp  fastnc.h  gisjoinmap.cpp  gisjoinmap.h  jobpool.cpp  jobpool.h  main.cpp  main.h  write.cpp  write.h
test/: argstest.cpp  cftimetest.cpp  doctest.h  fastnctest.cpp  main.cpp  writetest.cpp
